# rust_ray

./: Cargo.toml  launch.sh  ref.yml  scene1.yml  spec.yml
src/math/: Cargo.toml
src/math/src/: error.rs  lib.rs  num.rs  vector copy.rs  vector.rs  vector2d.rs
src/ray/: Cargo.toml
src/ray/src/: camera.rs  color.rs  engine.rs  image.rs  intersection.rs  lib.rs  light.rs  ray.rs  surface.rs  vector.rs  world.rs
src/ray/src/surfaces/: mod.rs  surface.rs
src/ray/src/things/: mod.rs  sphere.rs  thing.rs
src/tracer/: Cargo.toml
src/tracer/src/: main.rs
