[package]
name = "tracer"
version = "0.1.0"
authors = ["manuel_deval <manuel.deval@gmail.com>"]
edition = "2018"

[dependencies]
pixel-canvas = "0.2.2"
serde_json = "1.0"
serde_yaml = "0.8.17"
serde = "1.0"
serde_derive = "1.0"
clap = "2.33.3"
math = { path = "../math" }
ray = { path = "../ray" }

[[bin]]
name="tracer"
path="src/main.rs"